--- a/portfolio1.css
+++ b/portfolio1.css
@@ -1,3 +1,52 @@
+.slideshow-container {
+	max-width: 1000px;
+	position: relative;
+	margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+	display: none;
+  }
+  
+
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+	color: #f2f2f2;
+	font-size: 12px;
+	padding: 8px 12px;
+	position: absolute;
+	top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+	cursor: pointer;
+	height: 15px;
+	width: 15px;
+	margin: 0 2px;
+	background-color: #bbb;
+	border-radius: 50%;
+	display: inline-block;
+	transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+	background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+	animation-name: fade;
+	animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+	from {opacity: .4}
+	to {opacity: 1}
+  }
+
 /* Styles defined for the desktop or the bigger screen devices*/
 
 
@@ -9,10 +58,9 @@ body {
 } 
 
 .container-2 {
-    background: url(
-'https://ahjummamshies.com/wp-content/uploads/2021/03/jeon-yeobin.jpeg?w=770&h=500&crop=1');
+    background: url('jo_icon.jpg');
     border: 0.25rem solid black;
-    width: 770px;
+    width: 500px;
     margin-top: 3%;
     height: 500px;
     box-align: border-top-right-radius;
@@ -95,21 +143,7 @@ body {
     background-size: cover;
     transition: background-image 0.3s ease-in-out;
 }
-*/#sudo:hover {
-    background-image: url(
-"https://img.freepik.com/free-photo/close-up-microphone-speech-official-event_23-2151054269.jpg");
-   
-}
-.zoom {
-    padding: 150px;
-    transition: transform .1s;
-    width: 2000px;
-    height: 2000px;
-    }
-    
-.zoom:hover {
-    transform: scale(4);
-}
+*/
 /* About section styles */
 .about { 
     display: flex;
@@ -135,7 +169,7 @@ body {
 } 
 
 .about .about-image img { 
-	height:600px; 
+	height:700px; 
 	width: 400px; 
     padding: 5rem 5rem 5rem 1rem;
 } 
